[package]
name = "robinrust"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
base64 = "0.22.1"
ed25519-dalek = "3.0.0-pre.1"
tokio = { version = "1.47.0", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = {version = "1.0.228", features = ["default"]}
rust_decimal = { version = "1.38.0", features = ["serde", "serde-with-float", "serde-with-str", "serde-str"] }
typed-builder = "0.22.0"
serde_json = "1.0.145"
uuid = {version =  "1.18.1", features = ["v4"] }